--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 /Pre_ArrayList/nbproject/private/
 /Pre_ArrayList/build/
 /ArrayList/build/
+/Blood Donate test/nbproject/private/
+/Another Project/nbproject/private/
+/Another Project/build/
+/Blood Donate test/build/
